--- a/index.html
+++ b/index.html
@@ -22,18 +22,12 @@
               <img src="src/img/logo.png" alt="" class="nav__logo" />
             </a>
           </div>
-          <button
-            class="nav__toggler-open unstyle"
-            aria-label="navigation toggler"
-          >
+          <button class="nav__toggler-open unstyle" aria-label="navigation toggler">
             <i class="bi bi-list"></i>
           </button>
           <ul class="nav__list unstyle">
             <li>
-              <button
-                class="nav__toggler-close unstyle"
-                aria-label="navigation toggler"
-              >
+              <button class="nav__toggler-close unstyle" aria-label="navigation toggler">
                 <i class="bi bi-x-lg"></i>
               </button>
             </li>
@@ -59,11 +53,11 @@
       <div class="container intro__container">
         <div>
           <h1 class="section__title section__title-intro">
-            Hello, Je suis <strong>Gloire Nianga !</strong>
+            Hello, Je suis <strong>Gloire KIBA !</strong>
           </h1>
           <p class="section__subtitle section__subtitle-intro">
-            Un langage qui n'affecte pas votre manière de penser la
-            programmation ne vaut pas la peine d'être connu. <br />
+            Un langage qui n'affecte pas votre manière de penser la programmation ne vaut pas la
+            peine d'être connu. <br />
           </p>
           <a href="#" class="btn btn-primary btn-large">Télecharger mon CV</a>
         </div>
@@ -79,9 +73,9 @@
           <div class="about__content">
             <h3 class="section__subtitle">A propos de moi</h3>
             <p class="section__text">
-              Bonjour, je m'appelle KIBA Gloire et j'ai 18 ans, je suis
-              actuellement en formation Bac + 1 Informatique et numérique -
-              Support et conseil au lycée GUSTAVE FLAUBERT / Rouen 76044
+              Bonjour, je m'appelle KIBA Gloire et j'ai 18 ans, je suis actuellement en formation
+              Bac + 1 Informatique et numérique - Support et conseil au lycée GUSTAVE FLAUBERT /
+              Rouen 76044
             </p>
 
             <a href="#" class="btn btn-secondary">Embaucher moi !</a>
@@ -96,15 +90,12 @@
         <h2 class="section__title">Mon Parcours</h2>
         <div class="formations__wraper">
           <div class="formation">
-            <h3 class="section__subtitle section__subtitle-formation">
-              BACCALAURÉAT STMG (SIG)
-            </h3>
+            <h3 class="section__subtitle section__subtitle-formation">BACCALAURÉAT STMG (SIG)</h3>
             <p class="section__subtitle">2020-2021</p>
             <p class="section__text">
-              Cette spécialité privilégie une approche concrète autour de 4
-              thèmes : Organisation informatisée ; Information pour décider et
-              agir ; Communiquer pour collaborer ; Rechercher la performance du
-              système d’information.
+              Cette spécialité privilégie une approche concrète autour de 4 thèmes : Organisation
+              informatisée ; Information pour décider et agir ; Communiquer pour collaborer ;
+              Rechercher la performance du système d’information.
             </p>
             <a
               href="https://www.orleans-informatique.com/etudiants/informatique/terminale-stmg-sig/presentation"
@@ -119,9 +110,8 @@
             </h3>
             <p class="section__subtitle">2021-2022 (En cours...)</p>
             <p class="section__text">
-              Intitulé officiel figurant sur le diplôme : Diplôme
-              d'établissement Bac + 1 Informatique et numérique - Support et
-              conseil digital
+              Intitulé officiel figurant sur le diplôme : Diplôme d'établissement Bac + 1
+              Informatique et numérique - Support et conseil digital
             </p>
             <a
               href="https://formation.cnam.fr/rechercher-par-discipline/diplome-d-etablissement-bac-1-informatique-et-numerique-support-et-conseil-digital-1263193.kjsp"
@@ -139,9 +129,7 @@
       <div class="container skills__container">
         <img src="src/img/skills.png" alt="" class="skills__img" />
         <div class="skills__wrapper">
-          <h3 class="section__subtitle section__subtitle-skills">
-            Mes compétences
-          </h3>
+          <h3 class="section__subtitle section__subtitle-skills">Mes compétences</h3>
           <div class="skills__bar">
             <div class="skills__bar-info">
               <span class="skills__bar-techno">HTML</span>
@@ -197,9 +185,7 @@
     <!-- Footer -->
     <footer class="footer">
       <div class="container">
-        <a href="tel:+33751196079" class="footer__link"
-          ><i class="fas fa-phone-square-alt"></i
-        ></a>
+        <a href="tel:+33751196079" class="footer__link"><i class="fas fa-phone-square-alt"></i></a>
         <a
           href="https://www.linkedin.com/in/gatse-gloire-304273225/"
           target="_blank"
